# puzzle-solver-wasm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
crates/solver-core/: Cargo.toml
crates/solver-core/src/: constraint.rs  lib.rs  params.rs  solver.rs  state.rs  types.rs
crates/solver-core/src/constraints/: box_constraint.rs  column.rs  diagonal.rs  killer_cage.rs  mod.rs  palindrome.rs  row.rs  slow_thermo.rs  thermo.rs
crates/solver-wasm/: Cargo.toml
crates/solver-wasm/src/: lib.rs
src/: App.tsx  index.css
src/api/: solver-worker.ts  sudoku.ts
src/components/: ConstraintSidebar.tsx  ConstraintToolbar.tsx  Home.css  Home.tsx  Layout.css  Layout.tsx  Sudoku.css  Sudoku.tsx  SudokuCell.tsx  SudokuGrid.tsx
src/constraints/: definitions.ts
