[package]
name = "solver-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for the puzzle solver engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
solver-core = { path = "../solver-core" }
wasm-bindgen = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
